# deltahdl

./: .clang-format  .clang-tidy  .coverage  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  mypy.ini  tmp_transitive_closure_results.txt
src/: CMakeLists.txt  main.cpp
src/common/: arena.h  diagnostic.cpp  diagnostic.h  source_loc.h  source_mgr.cpp  source_mgr.h  types.cpp  types.h
src/elab/: const_eval.cpp  const_eval.h  elaborator.cpp  elaborator.h  type_eval.cpp
src/elaboration/: const_eval.cpp  const_eval.h  elaborator.cpp  elaborator.h  elaborator_defparam.cpp  elaborator_validate.cpp  rtlir.h  sensitivity.cpp  sensitivity.h  type_eval.cpp  type_eval.h
src/elaborator/: abort_property.cpp  abort_property.h  always_range.cpp  always_range.h  annex_f_extended_booleans.cpp  annex_f_extended_booleans.h  annex_f_finite_word_satisfaction.cpp  annex_f_finite_word_satisfaction.h  annex_f_future.cpp  annex_f_future.h  annex_f_grammar.cpp  annex_f_grammar.h  annex_f_local_variable_flow.cpp  annex_f_local_variable_flow.h  annex_f_neutral_satisfaction.cpp  annex_f_neutral_satisfaction.h  annex_f_neutral_satisfaction_local_variables.cpp  annex_f_neutral_satisfaction_local_variables.h  annex_f_notation.cpp  annex_f_notation.h  annex_f_past.cpp  annex_f_past.h  annex_f_property_rewrite.cpp  annex_f_property_rewrite.h  annex_f_sequence_rewrite.cpp  annex_f_sequence_rewrite.h  annex_f_tight_satisfaction.cpp  annex_f_tight_satisfaction.h  annex_f_tight_satisfaction_local_variables.cpp  annex_f_tight_satisfaction_local_variables.h  annex_f_vacuity.cpp  annex_f_vacuity.h  annex_f_vacuity_local_variables.cpp  annex_f_vacuity_local_variables.h  annex_f_word_ops_internal.h  checker_context_inference.cpp  checker_context_inference.h  checker_instantiation.cpp  checker_instantiation.h  checker_procedures.cpp  (+141 more)
src/lexer/: keywords.cpp  keywords.h  lexer.cpp  lexer.h  lexer_operators.cpp  string_escape.cpp  string_escape.h  token.h
src/parser/: assertion_control_task.cpp  assertion_control_task.h  ast.h  ast_class.h  ast_design.h  ast_expr.h  ast_module.h  ast_specify.h  ast_stmt.h  ast_type.h  expr_parser.cpp  expr_parser_aux.cpp  expr_parser_calls.cpp  expr_parser_internal.h  expr_parser_patterns.cpp  library_map.cpp  library_map.h  parser.cpp  parser.h  parser_assert.cpp  parser_class.cpp  parser_clocking.cpp  parser_config.cpp  parser_decl.cpp  parser_declaration.cpp  parser_dpi_validate.cpp  parser_dpi_validate.h  parser_generate.cpp  parser_inst.cpp  parser_instance_internal.h  parser_items.cpp  parser_port.cpp  parser_sequence_property_decl.cpp  parser_specify.cpp  parser_stmt.cpp  parser_toplevel.cpp  parser_types.cpp  parser_udp.cpp  parser_verify.cpp  precompiled_library.cpp  (+5 more)
src/preproc/: macro_table.cpp  macro_table.h  preprocessor.cpp  preprocessor.h
src/preprocessor/: macro_table.cpp  macro_table.h  preprocessor.cpp  preprocessor.h  preprocessor_directives.cpp  preprocessor_inline.cpp  preprocessor_macros.cpp
src/sim/: net.cpp  net.h  process.cpp  scheduler.cpp  scheduler.h  systask.cpp  systask.h  variable.cpp  vcd_writer.cpp
src/simulation/: adv_sim.cpp  assertion.cpp  assertion.h  awaiters.h  class_object.cpp  class_object.h  clocking.cpp  clocking.h  compiled_sim.cpp  compiled_sim.h  constraint_solver.cpp  constraint_solver.h  coverage.cpp  coverage.h  dpi.cpp  dpi.h  dpi_runtime.cpp  dpi_runtime.h  driver_update.cpp  driver_update.h  eval.cpp  eval.h  eval_array.cpp  eval_array.h  eval_enum.cpp  eval_expr.cpp  eval_fileio.cpp  eval_format.cpp  eval_function.cpp  eval_math.cpp  eval_string.cpp  eval_string.h  eval_systask.cpp  exec_task.h  lowerer.cpp  lowerer.h  mt_sim.cpp  mt_sim.h  net.cpp  net.h  (+26 more)
src/simulator/: adv_sim.cpp  adv_sim.h  assertion.cpp  assertion.h  awaiters.h  checker_instance_scheduling.cpp  checker_instance_scheduling.h  checker_scheduling_semantics.cpp  checker_scheduling_semantics.h  checker_variable_randomization.cpp  checker_variable_randomization.h  class_object.cpp  class_object.h  clocking.cpp  clocking.h  compiled_sim.cpp  compiled_sim.h  constraint_solver.cpp  constraint_solver.h  constraint_solver_eval.cpp  constraint_solver_internal.h  constraint_solver_solve.cpp  cover_statement.h  coverage.cpp  coverage.h  coverage_bins.cpp  coverage_control.h  coverage_cross.cpp  coverage_db.cpp  coverage_internal.h  coverage_options.cpp  coverage_types.h  dpi.cpp  dpi.h  dpi_runtime.cpp  dpi_runtime.h  dpi_runtime_assertion.cpp  driver_update.cpp  driver_update.h  eval.cpp  (+130 more)
src/synth/: aig.cpp  aig.h  aig_balance.cpp  aig_balance.h  aig_refactor.cpp  aig_refactor.h  aig_rewrite.cpp  aig_rewrite.h  cell_map.cpp  cell_map.h  liberty.cpp  lut_map.cpp  lut_map.h  netlist_writer.cpp  netlist_writer.h  synth_lower.cpp  synth_lower.h
src/synthesis/: adv_synth.cpp  adv_synth.h  aig.cpp  aig.h  aig_balance.cpp  aig_balance.h  aig_opt.cpp  aig_opt.h  aig_refactor.cpp  aig_refactor.h  aig_rewrite.cpp  aig_rewrite.h  cell_map.cpp  cell_map.h  liberty.cpp  liberty.h  lut_map.cpp  lut_map.h  mem_infer.cpp  mem_infer.h  netlist_writer.cpp  netlist_writer.h  synth_lower.cpp  synth_lower.h
src/synthesizer/: adv_synth.cpp  adv_synth.h  aig.cpp  aig.h  aig_opt.cpp  aig_opt.h  cell_map.cpp  cell_map.h  liberty.cpp  liberty.h  lut_map.cpp  lut_map.h  mem_infer.cpp  mem_infer.h  netlist_writer.cpp  netlist_writer.h  synth_lower.cpp  synth_lower.h
src/vpi/: sv_vpi_user.cpp  sv_vpi_user.h  svdpi.cpp  svdpi.h  vpi_stub.cpp  vpi_stub.h
test/: .clang-tidy  CMakeLists.txt
test/e2e/: alu.sv  array_map.sv  assoc_arg.sv  assoc_literal.expected  assoc_literal.sv  assoc_struct_key.sv  assoc_traversal_byte.sv  cross_array.expected  cross_array.sv  dyn_array.expected  dynarray_sum.sv  function_call.sv  hello.sv  local_var_decl.sv  named_event.sv  queue_ref_outdated.sv  struct_literal.expected  tagged_union.sv
test/integration/: case_stmt.sv  counter.sv  function_call.expected  if_else.expected  if_else.sv  local_var_decl.expected
test/lib/: conftest.py
test/scripts/: conftest.py
test/unit/: test_adv_synth.cpp  test_aggregate.cpp  test_aig.cpp  (+69 more)
(+4841 files in other folders)
