add_library(deltahdl_lib STATIC
    common/types.cpp
    common/diagnostic.cpp
    common/source_mgr.cpp
    preprocessor/macro_table.cpp
    preprocessor/preprocessor.cpp
    preprocessor/preprocessor_directives.cpp
    lexer/keywords.cpp
    lexer/lexer.cpp
    lexer/string_escape.cpp
    parser/parser.cpp
    parser/parser_port.cpp
    parser/parser_decl.cpp
    parser/parser_generate.cpp
    parser/parser_toplevel.cpp
    parser/expr_parser.cpp
    parser/expr_parser_aux.cpp
    parser/parser_stmt.cpp
    parser/parser_assert.cpp
    parser/parser_clocking.cpp
    parser/parser_verify.cpp
    parser/parser_specify.cpp
    parser/parser_config.cpp
    parser/parser_inst.cpp
    parser/parser_items.cpp
    parser/time_resolve.cpp
    elaborator/elaborator.cpp
    elaborator/elaborator_defparam.cpp
    elaborator/elaborator_validate.cpp
    elaborator/type_eval.cpp
    elaborator/const_eval.cpp
    elaborator/sensitivity.cpp
    simulator/driver_update.cpp
    simulator/net.cpp
    simulator/scheduler.cpp
    simulator/process.cpp
    simulator/variable.cpp
    simulator/sim_context.cpp
    simulator/class_object.cpp
    simulator/eval.cpp
    simulator/eval_function.cpp
    simulator/eval_systask.cpp
    simulator/eval_expr.cpp
    simulator/eval_enum.cpp
    simulator/eval_array.cpp
    simulator/eval_string.cpp
    simulator/eval_math.cpp
    simulator/eval_fileio.cpp
    simulator/eval_format.cpp
    simulator/stmt_exec.cpp
    simulator/stmt_assign.cpp
    simulator/lowerer.cpp
    simulator/vcd_writer.cpp
    simulator/adv_sim.cpp
    simulator/vpi.cpp
    simulator/sv_callable.cpp
    simulator/clocking.cpp
    simulator/assertion.cpp
    simulator/sva_engine.cpp
    simulator/coverage.cpp
    simulator/dpi.cpp
    simulator/dpi_runtime.cpp
    simulator/compiled_sim.cpp
    simulator/mt_sim.cpp
    simulator/constraint_solver.cpp
    simulator/specify.cpp
    simulator/udp_eval.cpp
    simulator/sdf_parser.cpp
    simulator/svdpi.cpp
    simulator/sv_vpi_user.cpp
    synthesizer/aig.cpp
    synthesizer/synth_lower.cpp
    synthesizer/aig_opt.cpp
    synthesizer/lut_map.cpp
    synthesizer/liberty.cpp
    synthesizer/cell_map.cpp
    synthesizer/netlist_writer.cpp
    synthesizer/adv_synth.cpp
    synthesizer/mem_infer.cpp
)

target_include_directories(deltahdl_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

add_executable(deltahdl main.cpp)
target_link_libraries(deltahdl PRIVATE deltahdl_lib)
