add_library(deltahdl_lib STATIC
    common/types.cpp
    common/diagnostic.cpp
    common/source_mgr.cpp
    preprocessor/macro_table.cpp
    preprocessor/preprocessor.cpp
    preprocessor/preprocessor_inline.cpp
    preprocessor/preprocessor_directives.cpp
    preprocessor/preprocessor_macros.cpp
    lexer/keywords.cpp
    lexer/lexer.cpp
    lexer/string_escape.cpp
    parser/parser.cpp
    parser/parser_port.cpp
    parser/parser_dpi_validate.cpp
    parser/parser_declaration.cpp
    parser/parser_types.cpp
    parser/parser_generate.cpp
    parser/parser_class.cpp
    parser/parser_toplevel.cpp
    parser/expr_parser.cpp
    parser/expr_parser_aux.cpp
    parser/expr_parser_patterns.cpp
    parser/parser_stmt.cpp
    parser/parser_assert.cpp
    parser/parser_sequence_property_decl.cpp
    parser/sequence_operator_precedence.cpp
    parser/parser_clocking.cpp
    parser/parser_verify.cpp
    parser/parser_specify.cpp
    parser/parser_config.cpp
    parser/parser_inst.cpp
    parser/parser_items.cpp
    parser/time_resolve.cpp
    parser/library_map.cpp
    parser/precompiled_library.cpp
    parser/assertion_control_task.cpp
    elaborator/elaborator.cpp
    elaborator/elaborator_items.cpp
    elaborator/elaborator_items_scope.cpp
    elaborator/inline_constraint_scope_resolution.cpp
    elaborator/interface_syntax.cpp
    elaborator/property_rewrite.cpp
    elaborator/rewrite_algorithm.cpp
    elaborator/checker_rewrite.cpp
    elaborator/checker_rewrite_algorithm.cpp
    elaborator/checker_instantiation.cpp
    elaborator/checker_context_inference.cpp
    elaborator/covergroup_in_checker.cpp
    elaborator/covergroup_inheritance.cpp
    elaborator/cross_bin_with_covergroup.cpp
    elaborator/cross_automatic_types.cpp
    elaborator/cross_set_expression.cpp
    elaborator/coverpoint_bin_set_expression.cpp
    elaborator/concurrent_assertion_expr.cpp
    elaborator/function_in_checker.cpp
    elaborator/checker_procedures.cpp
    elaborator/checker_variable_assignment.cpp
    elaborator/property_instantiation.cpp
    elaborator/nexttime_index.cpp
    elaborator/always_range.cpp
    elaborator/eventually_range.cpp
    elaborator/clock_flow.cpp
    elaborator/clock_resolution.cpp
    elaborator/multiclock_property.cpp
    elaborator/multiclock_sequence.cpp
    elaborator/sequence_method.cpp
    elaborator/multiclock_endpoint.cpp
    elaborator/sequence_composition.cpp
    elaborator/semantic_leading_clock.cpp
    elaborator/sequence_admits_empty.cpp
    elaborator/sequence_degeneracy.cpp
    elaborator/disable_iff_resolution.cpp
    elaborator/inferred_clock_disable.cpp
    elaborator/sequence_match_attach.cpp
    elaborator/sequence_repetition.cpp
    elaborator/sampled_value.cpp
    elaborator/overridden_sample_method.cpp
    elaborator/global_clocking_sampled_value.cpp
    elaborator/concurrent_assert_action.cpp
    elaborator/abort_property.cpp
    elaborator/typed_sequence_formal.cpp
    elaborator/typed_property_formal.cpp
    elaborator/let_construct.cpp
    elaborator/rewrite_item.cpp
    elaborator/annex_f_notation.cpp
    elaborator/annex_f_grammar.cpp
    elaborator/annex_f_sequence_rewrite.cpp
    elaborator/annex_f_property_rewrite.cpp
    elaborator/annex_f_tight_satisfaction.cpp
    elaborator/annex_f_local_variable_flow.cpp
    elaborator/annex_f_tight_satisfaction_local_variables.cpp
    elaborator/annex_f_neutral_satisfaction.cpp
    elaborator/annex_f_neutral_satisfaction_local_variables.cpp
    elaborator/annex_f_finite_word_satisfaction.cpp
    elaborator/annex_f_vacuity.cpp
    elaborator/annex_f_vacuity_local_variables.cpp
    elaborator/annex_f_extended_booleans.cpp
    elaborator/annex_f_past.cpp
    elaborator/annex_f_future.cpp
    elaborator/elaborator_defparam.cpp
    elaborator/elaborator_gates.cpp
    elaborator/elaborator_validate.cpp
    elaborator/elaborator_validate_classes.cpp
    elaborator/elaborator_validate_operations.cpp
    elaborator/elaborator_validate_types.cpp
    elaborator/elaborator_validate_struct_types.cpp
    elaborator/type_eval.cpp
    elaborator/const_eval.cpp
    elaborator/sensitivity.cpp
    simulator/driver_update.cpp
    simulator/net.cpp
    simulator/switch_network.cpp
    simulator/scheduler.cpp
    simulator/process.cpp
    simulator/variable.cpp
    simulator/sim_context.cpp
    simulator/class_object.cpp
    simulator/evaluation.cpp
    simulator/evaluation_literal.cpp
    simulator/eval_function.cpp
    simulator/eval_process_methods.cpp
    simulator/eval_randomize.cpp
    simulator/eval_static_method.cpp
    simulator/sequence_monitor.cpp
    simulator/eval_systask.cpp
    simulator/eval_expr.cpp
    simulator/eval_enum.cpp
    simulator/eval_array.cpp
    simulator/eval_string.cpp
    simulator/eval_math.cpp
    simulator/eval_fileio.cpp
    simulator/eval_format.cpp
    simulator/stmt_exec.cpp
    simulator/statement_assign.cpp
    simulator/statement_assign_core.cpp
    simulator/statement_assign_nonblocking.cpp
    simulator/lowerer.cpp
    simulator/lowerer_child.cpp
    simulator/lowerer_inst.cpp
    simulator/lowerer_import.cpp
    simulator/vcd_writer.cpp
    simulator/adv_sim.cpp
    simulator/vpi.cpp
    simulator/sv_callable.cpp
    simulator/clocking.cpp
    simulator/checker_instance_scheduling.cpp
    simulator/checker_scheduling_semantics.cpp
    simulator/checker_variable_randomization.cpp
    simulator/assertion.cpp
    simulator/sva_engine.cpp
    simulator/coverage.cpp
    simulator/dpi.cpp
    simulator/dpi_runtime.cpp
    simulator/compiled_sim.cpp
    simulator/mt_sim.cpp
    simulator/constraint_solver.cpp
    simulator/specify.cpp
    simulator/udp_eval.cpp
    simulator/sdf_parser.cpp
    simulator/svdpi.cpp
    simulator/sv_vpi_user.cpp
    synthesizer/aig.cpp
    synthesizer/synth_lower.cpp
    synthesizer/aig_opt.cpp
    synthesizer/lut_map.cpp
    synthesizer/liberty.cpp
    synthesizer/cell_map.cpp
    synthesizer/netlist_writer.cpp
    synthesizer/adv_synth.cpp
    synthesizer/mem_infer.cpp
    elaborator/elaborator_bind.cpp
    elaborator/elaborator_cont_assign.cpp
    elaborator/elaborator_decls.cpp
    elaborator/elaborator_dpi.cpp
    elaborator/elaborator_generate.cpp
    elaborator/elaborator_module_inst.cpp
    elaborator/elaborator_module.cpp
    elaborator/elaborator_port_binding.cpp
    elaborator/elaborator_port_binding_checks.cpp
    elaborator/elaborator_process.cpp
    elaborator/elaborator_resolve.cpp
    elaborator/elaborator_scope_rules.cpp
    elaborator/elaborator_scope_rules_hier.cpp
    elaborator/elaborator_typedef.cpp
    elaborator/elaborator_validate_class_array_assign.cpp
    elaborator/elaborator_validate_class_array_index.cpp
    elaborator/elaborator_validate_class_constraints.cpp
    elaborator/elaborator_validate_class_handles.cpp
    elaborator/elaborator_validate_class_inheritance.cpp
    elaborator/elaborator_validate_class_members.cpp
    elaborator/elaborator_validate_class_outofblock.cpp
    elaborator/elaborator_validate_clocking.cpp
    elaborator/elaborator_validate_assertion_actions.cpp
    elaborator/elaborator_validate_config.cpp
    elaborator/elaborator_validate_datatype_ops.cpp
    elaborator/elaborator_validate_funcbody.cpp
    elaborator/elaborator_validate_funcchecks.cpp
    elaborator/elaborator_validate_interface.cpp
    elaborator/elaborator_validate_matches.cpp
    elaborator/elaborator_validate_operations_arrays.cpp
    elaborator/elaborator_validate_operations_streaming.cpp
    elaborator/elaborator_validate_queries.cpp
    elaborator/elaborator_validate_specify.cpp
    elaborator/elaborator_validate_subroutine.cpp
    lexer/lexer_operators.cpp
    parser/expr_parser_calls.cpp
    parser/parser_udp.cpp
    simulator/constraint_solver_eval.cpp
    simulator/constraint_solver_solve.cpp
    simulator/coverage_bins.cpp
    simulator/coverage_cross.cpp
    simulator/coverage_db.cpp
    simulator/coverage_options.cpp
    simulator/dpi_runtime_assertion.cpp
    simulator/eval_array_locator.cpp
    simulator/eval_array_queue.cpp
    simulator/eval_function_args.cpp
    simulator/eval_select.cpp
    simulator/eval_streaming.cpp
    simulator/eval_systask_io.cpp
    simulator/eval_systask_pla.cpp
    simulator/eval_systask_query.cpp
    simulator/eval_systask_readmem.cpp
    simulator/eval_systask_writemem.cpp
    simulator/eval_systask_verif.cpp
    simulator/eval_system_func.cpp
    simulator/eval_system_task.cpp
    simulator/evaluation_ops.cpp
    simulator/lowerer_class.cpp
    simulator/lowerer_var.cpp
    simulator/sdf_annotate.cpp
    simulator/sim_context_classgc.cpp
    simulator/statement_assign_decl.cpp
    simulator/statement_assign_stream.cpp
    simulator/stmt_exec_control.cpp
    simulator/stmt_exec_randsequence.cpp
    simulator/stmt_exec_wait.cpp
    simulator/sva_engine_properties.cpp
    simulator/sva_engine_sampling.cpp
    simulator/sva_engine_sequences.cpp
    simulator/vpi_callbacks.cpp
    simulator/vpi_control.cpp
    simulator/vpi_handle.cpp
    simulator/vpi_helpers_assertions.cpp
    simulator/vpi_helpers_instance.cpp
    simulator/vpi_helpers_nets.cpp
    simulator/vpi_helpers_statements.cpp
    simulator/vpi_helpers_variables.cpp
    simulator/vpi_iterate.cpp
    simulator/vpi_query.cpp
    simulator/vpi_systf.cpp
    simulator/vpi_value_array.cpp
    simulator/vpi_value.cpp
)

target_include_directories(deltahdl_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

add_executable(deltahdl main.cpp)
target_link_libraries(deltahdl PRIVATE deltahdl_lib)
